@@ -85,6 +85,7 @@ public class Alterer extends SpecialistMage
 		CMLib.ableMapper().addCharAbilityMapping(ID(),22,"Spell_GravitySlam",25,true);
 		CMLib.ableMapper().addCharAbilityMapping(ID(),23,"Spell_Fabricate",25,true);
 		CMLib.ableMapper().addCharAbilityMapping(ID(),25,"Spell_Duplicate",25,true);
-		CMLib.ableMapper().addCharAbilityMapping(ID(),30,"Spell_Wish",25,true);
+		CMLib.ableMapper().addCharAbilityMapping(ID(),30,"Spell_LimitedWish",25,true);
+		CMLib.ableMapper().addCharAbilityMapping(ID(),60,"Spell_Wish",25,true);
 	}
 }
